@@ -74,6 +74,8 @@ static GOptionEntry entries[] = {
      NULL},
 	{"vertical", 0, 0, G_OPTION_ARG_NONE, &vertical_layout, N_("Use Vertical Layout"),
      NULL},	
+	{"showplaylist", 0, 0, G_OPTION_ARG_NONE, &playlist_visible, N_("Start with playlist open"),
+     NULL},	
     {"rpname", 0, 0, G_OPTION_ARG_STRING, &rpname, N_("Real Player Name"), "NAME"},
     {"rpconsole", 0, 0, G_OPTION_ARG_STRING, &rpconsole, N_("Real Player Console ID"), "CONSOLE"},
     {"rpcontrols", 0, 0, G_OPTION_ARG_STRING, &rpcontrols, N_("Real Player Console Controls"),
@@ -232,6 +234,7 @@ int main(int argc, char *argv[])
 	forcecache = FALSE;
 	volume = 0;
 	vertical_layout = FALSE;
+	playlist_visible = FALSE;
 
     // call g_type_init or otherwise we can crash
     g_type_init();
@@ -289,6 +292,9 @@ int main(int argc, char *argv[])
 
     create_window(embed_window);
 
+	if (playlist_visible == TRUE)
+		menuitem_view_playlist_callback(NULL,NULL);
+	
     fullscreen = 0;
     autopause = FALSE;
     state = QUIT;
